[tool.poetry]
name = "Async-FastAPI-S3"
version = "0.1.0"
description = ""
authors = ["Sergei <reyangood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
aiobotocore = "^2.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "0.26.0"
pytest-dotenv = "^0.5.2"
pillow = "^10.4.0"
ruff = "^0.5.5"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  ".", "s3_api",
]
asyncio_mode="auto"
env_files = '.test.env'

[tool.coverage.run]
parallel = true

[tool.ruff]
line-length = 79
exclude = ['migrations']

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "single"